--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script language='javascript'>
-    window.location.href = "https://t.co/Dxbbp5enPv"
+    window.location.href = "https://t.co/C3dIsKx9NX"
 </script>
